--- a/tic-tac-toe/src/App.css
+++ b/tic-tac-toe/src/App.css
@@ -1,22 +1,3 @@
+@import "tailwindcss";
 
-.header {
-    display: flex;
-    justify-content: space-between; 
-    align-items: center;
-    padding: 0 2rem;
-    margin-top: 1rem;
 
-}
-
-.title {
-    font-size: 64px;
-    margin: 0;
-    font-weight: bold;
-}
-
-.rules {
-    font-size: 24px;
-    margin: 0;
-    font-weight: bold;
-    text-decoration: underline;
-}
