--- a/tic-tac-toe/src/index.css
+++ b/tic-tac-toe/src/index.css
@@ -9,7 +9,7 @@
 
 * {
     background-color: var(--bg-color);
-    color: var(--txt-color);
+    /* color: var(--txt-color); */
     font-family: sans-serif; /* Change Later -> Inter */
 
 }
