--- a/tic-tac-toe/src/index.css
+++ b/tic-tac-toe/src/index.css
@@ -1,5 +1,5 @@
 * {
-    background-color: var(--bg-color);
+    /* background-color: var(--bg-color); */
     /* color: var(--txt-color); */
     font-family: sans-serif; /* Change Later -> Inter */
 }
